<resources>
    <string name="app_name">wasitguide</string>
    <string name="about_us_title">البرمجة من اجل العراق</string>
    <string name="Abuot_us_discription">وهي مبادرة إنسانية غير ربحية تهدف الى خدمة المجتمع عن طريق البرمجة Programming.\n تعتبر “Code For IRAQ” مبادرة تعليمية حقيقية ترعى المهتمين بتعلم تصميم وبرمجة تطبيقات الهاتف الجوال ومواقع الانترنت وبرامج الحاسوب والشبكات والاتصالات ونظم تشغيل الحاسوب باستخدام التقنيات مفتوحة المصدر Open Source ، \nكما توفر لهم جميع الدروس التعليمية اللازمة وبشكل مجاني تماماً</string>
    <string name="About_wasit">محافظة واسط هي محافظة تقع وسط العراق. سميت باسم مدينة واسط التي بناها الحجاج بن يوسف الثقفي سنة 78 هجرية وأتمها في سنة 86 هجرية لتكون مقرًا جديدًا لجنوده. عاصمة محافظة واسط الحالية هي مدينة الكوت التي من سماتها المميزة أنها على شكل شبه جزيرة تحيط بها المياه من جهات الشرق والغرب والجنوب وتبعد عن بغداد التي تقع شمالها 180 كيلومترًا وتربطها بجنوب العراق. وهناك دراسة أكاديمية تقترح ضم مدينة بلدروز التي هي في محافظة ديالى حالياً إلى محافظة واسط.
\n
تتبع محافظة واسط عدة أقضية ونواح تفصل بينها وبين المحافظات التالية:
\n
*محافظة بغـداد منها: النعمانية، العزيزيه، الصويرة, الزبيدية\n
*محافظة ذي قار منها: الموفقيه، الحي.والبشائر\n
*محافظة ميسـان منها: شيخ سعد.\n
*محافظة بابــل منها: الأحرار، الشحيميه، النعمانيه.\n
*محافظة ديــالى منها: بدره.\n</string>


    <string name="About_wasit2">Main2Activity</string>
    <string name="Aria_title">المساحة</string>
    <string name="aria_info">تبلغ مساحة محافظة واسط ( 17153 ) كيلو متر مربع وتشكل نسبة 4% من مساحة العراق ( ألبالغة 441000 ) كيلو متر مربع .</string>
    <string name="farm_title">الزراعة</string>
    <string name="farm_info">
        محافظة واسط تعد سلة العراق الغذائية وهي تحتل سنوياً المرتبة الاولى على البلاد من حيث انتاج محصولي الحنطة والشعير
        \n
        حيث تشتهر محافظة واسط بإنتاج المواد الغذائية وبشكل خاص الحنطة والشعير والسمسم والتمور وغيرها وكذلك تمتاز بثروة سمكية غنية.
    </string>
    <string name="kut_info">مدينة الكوت (عاصمة محافظة واسط) يحيطها نهر دجلة وتقع فيها سدة الكوت التي بناها أبناء المحافظة بإشراف الإنجليز في النصف الأول من القرن العشرين (عام 1938)، تحاذي محافظة واسط من الشمال الشرقي محافظة ديالى ومن الجنوب الشرقي محافظة ميسان ويحدها من الجنوب الغربي محافظة ذي قار على امتداد نهر الغراف ويمتد محاذيا له طريق بري تتخلله نواظم «ذي قار» للري وسد الأبيض الذي طاقته التخزينية 25 مليون متر مكعب. وتحاذي واسط من الغرب محافظات القادسية التي مركزها مدينة الديوانية، ومحافظة بابل التي مركزها مدينة الحلة وهي اقرب المدن من ناحية الغرب لواسط ويحدها من الشرق مدينة مهران التابعة لإيران.
\n
تقع الكوت على نهر دجلة وتتفرع منها انهار: الدجيلي، والغراف، وشط الشطرة، وشط البدعة، وغيرها، وهي منطقة سهلية يعد مناخها انتقاليا بين مناخ البحر الأبيض المتوسط والمناخ الصحراوي الحار والجاف، أمطارها قليلة وحرارتها عالية، وتبدأ الحرارة فيها بالارتفاع اعتبارا من مارس، وتبلغ ذروتها في يوليو وأغسطس.</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>


</resources>
