<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">





    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="504dp"
                    android:layout_height="244dp"
                    android:contentDescription="ه"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="واســـط"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.971"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:lineSpacingExtra="5sp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/About_wasit"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="13dp" />

                        <TextView
                            android:id="@+id/aria_infoTextV2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:lineSpacingExtra="5sp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/Aria_title"
                            android:textSize="30sp"
                            tools:layout_editor_absoluteX="13dp" />

                        <TextView
                            android:id="@+id/aria_infoTextV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:lineSpacingExtra="5sp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/aria_info"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="13dp" />

                        <TextView
                            android:id="@+id/aria_infoTextV3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:lineSpacingExtra="5sp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/farm_title"
                            android:textSize="30sp"
                            tools:layout_editor_absoluteX="13dp" />

                        <TextView
                            android:id="@+id/aria_infoTextV4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:lineSpacingExtra="5sp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/farm_info"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="13dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="110dp"
                            android:paddingTop="10dp"
                            app:srcCompat="@drawable/about"
                            tools:layout_editor_absoluteX="365dp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/data"
                            tools:layout_editor_absoluteX="359dp"
                            tools:layout_editor_absoluteY="129dp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/getlocalsbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/units"
        android:cropToPadding="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>