<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WasitActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/horizontal_cycle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/kut">

                </ImageView>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="bottom|left"
                    android:alpha="0.3"
                    android:contentDescription="line"
                    app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="واســـط"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/cairobold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.971"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:lineSpacingExtra="5sp"
                            android:padding="10dp"
                            android:text="@string/About_wasit"
                            android:textSize="20sp"
                            app:fontFamily="@font/markazi"
                            tools:layout_editor_absoluteX="13dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|clip_horizontal"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mapimage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            app:srcCompat="@drawable/map_icon"
                            tools:layout_editor_absoluteX="365dp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="120dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/data"
                            tools:layout_editor_absoluteX="359dp"
                            tools:layout_editor_absoluteY="129dp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/low_white"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="2dp">

                    </android.support.v7.widget.CardView>

                    <TextView
                        android:id="@+id/aria_infoTextV2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineSpacingExtra="5sp"
                        android:padding="10dp"
                        android:text="@string/Aria_title"
                        android:textSize="30sp"
                        app:fontFamily="@font/cairoregular"
                        tools:layout_editor_absoluteX="13dp" />

                    <TextView
                        android:id="@+id/aria_infoTextV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineSpacingExtra="5sp"
                        android:padding="10dp"
                        android:text="@string/aria_info"
                        android:textSize="20sp"
                        app:fontFamily="@font/markazi"
                        tools:layout_editor_absoluteX="13dp" />

                    <TextView
                        android:id="@+id/aria_infoTextV3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineSpacingExtra="5sp"
                        android:padding="10dp"
                        android:text="@string/farm_title"
                        android:textSize="30sp"
                        app:fontFamily="@font/cairoregular"
                        tools:layout_editor_absoluteX="13dp" />

                    <TextView
                        android:id="@+id/aria_infoTextV4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineSpacingExtra="5sp"
                        android:padding="10dp"
                        android:text="@string/farm_info"
                        android:textSize="20sp"
                        app:fontFamily="@font/markazi"
                        tools:layout_editor_absoluteX="13dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>